# kitti_odometry_replayer_ros2

./: .clang-format  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  ament_code_style.cfg  ament_flake8.ini  ament_mypy.ini  cmake_format_config.py  non_rosdep_requirements.txt
ros2_kitti/: CMakeLists.txt  package.xml
ros2_kitti_core/: CMakeLists.txt  README.md  package.xml
ros2_kitti_core/apps/: convert_kitti_point_cloud.cpp
ros2_kitti_core/include/ros2_kitti_core/: clock_data_loader.hpp  data_loader.hpp  data_loader_base.hpp  data_replayer.hpp  data_utils.hpp  folder_data_loader.hpp  image_data_loader.hpp  image_utils.hpp  kitti_replayer_node.hpp  load_and_play_data_interface.hpp  play_data_interface_base.hpp  point_cloud_data_loader.hpp  point_cloud_utils.hpp  pose_data_loader.hpp  pose_utils.hpp  timer.hpp  timestamp_utils.hpp  type_checks.hpp
ros2_kitti_core/include/ros2_kitti_replay/: data_loader.hpp  data_replayer.hpp  pose_utils.hpp
ros2_kitti_core/launch/: replayer_bringup.launch.py
ros2_kitti_core/src/: clock_data_loader.cpp  data_loader_base.cpp  data_replayer.cpp  data_utils.cpp  folder_data_loader.cpp  image_data_loader.cpp  image_utils.cpp  kitti_replayer_node.cpp  point_cloud_data_loader.cpp  point_cloud_utils.cpp  pose_data_loader.cpp  pose_utils.cpp  timer.cpp  timestamp_utils.cpp  timestamps.cpp
ros2_kitti_core/test/unit/: CMakeLists.txt  data_loader_base_test.cpp  data_replayer_static_test.cpp  data_replayer_test.cpp  image_data_loader_test.cpp  image_utils_test.cpp  load_and_play_data_interface_test.cpp  point_cloud_data_loader_test.cpp  point_cloud_utils_test.cpp  pose_data_loader_test.cpp  pose_utils_test.cpp  timer_test.cpp  timestamp_utils_test.cpp
ros2_kitti_core/test/unit/include/ros2_kitti_core_test/: test_utils.hpp  test_with_image_io.hpp  test_with_io.hpp  test_with_point_cloud_io.hpp  test_with_pose_io.hpp
ros2_kitti_description/: README.md  package.xml  setup.cfg  setup.py
ros2_kitti_description/launch/: load_urdf.launch.py  visualize_urdf.launch.py
ros2_kitti_description/ros2_kitti_description/: constants.py  generate_urdf.py  generate_urdfs.py  helpers.py
ros2_kitti_description/rviz/: visualize_vehicle.rviz
ros2_kitti_description/urdf/: 00.urdf.xml  01.urdf.xml  02.urdf.xml  03.urdf.xml  04.urdf.xml  05.urdf.xml  06.urdf.xml  07.urdf.xml  08.urdf.xml  09.urdf.xml  10.urdf.xml  11.urdf.xml  12.urdf.xml  13.urdf.xml  14.urdf.xml  15.urdf.xml  16.urdf.xml  17.urdf.xml  18.urdf.xml  19.urdf.xml  20.urdf.xml  21.urdf.xml  default.urdf.xml
ros2_kitti_integration_test/: package.xml  setup.py
ros2_kitti_interface/: CMakeLists.txt  package.xml
ros2_kitti_interface/msg/: PlayRequest.msg  ReplayerState.msg  SetTimeRangeRequest.msg  StepRequest.msg
ros2_kitti_interface/srv/: Play.srv  Resume.srv  SetCurrentTransform.srv  SetTimeRange.srv  Step.srv
ros2_kitti_msgs/: CMakeLists.txt  package.xml
ros2_kitti_odom/: CMakeLists.txt  package.xml
ros2_kitti_odom/include/ros2_kitti_odom/: odometry_node_base.hpp
ros2_kitti_odom/src/: odometry_node_base.cpp
ros2_kitti_odom_kiss_icp/: CMakeLists.txt  README.md  package.xml
ros2_kitti_odom_kiss_icp/cmake/: FetchKissIcp.cmake
ros2_kitti_odom_kiss_icp/config/: default.yml
ros2_kitti_odom_kiss_icp/include/ros2_kitti_odom_kiss_icp/: kiss_icp_odometry_node.hpp  utils.hpp
ros2_kitti_odom_kiss_icp/launch/: kiss_icp_odom_with_replayer_bringup.launch.py
ros2_kitti_odom_kiss_icp/src/: kiss_icp_odometry_node.cpp
ros2_kitti_odom_open3d/: CMakeLists.txt  README.md  package.xml
ros2_kitti_odom_open3d/config/: default.yml
ros2_kitti_odom_open3d/include/ros2_kitti_odom_open3d/: open3d_odometry_config.hpp  open3d_odometry_node.hpp
ros2_kitti_odom_open3d/launch/: open3d_odom_with_replayer_bringup.launch.py
ros2_kitti_odom_open3d/src/: open3d_odometry_config.cpp  open3d_odometry_node.cpp
ros2_kitti_replay/: CMakeLists.txt  README.md  package.xml
ros2_kitti_replay/apps/: CMakeLists.txt  convert_kitti_point_cloud.cpp
ros2_kitti_replay/include/ros2_kitti_replay/: clock_data_loader.hpp  clock_publish_observer.hpp  data_loader.hpp  data_loader_base.hpp  data_replayer.hpp  kitti_replayer_node.hpp  load_and_play_data_interface.hpp  observer_base.hpp  ordered_timestamps.hpp  play_data_callback_base.hpp  play_data_interface_base.hpp  point_cloud_data_loader.hpp  point_cloud_utils.hpp  pose_data_loader.hpp  publish_observer.hpp  ros_publisher_play_data_callback.hpp  ros_publisher_play_data_interface.hpp  timestamp_publish_observer.hpp  timestamps.hpp
ros2_kitti_replay/launch/: replayer_bringup.launch.py
ros2_kitti_replay/rviz/: visualize_ground_truth.rviz  visualize_run.rviz
ros2_kitti_replay/src/: clock_data_loader.cpp  clock_publish_observer.cpp  data_loader_base.cpp  data_replayer.cpp  kitti_replayer_node.cpp  main.cpp  observer_base.cpp  ordered_timestamps.cpp  point_cloud_data_loader.cpp  point_cloud_utils.cpp  pose_data_loader.cpp  pose_utils.cpp  replayer_node.cpp  timestamp_publish_observer.cpp  timestamps.cpp  transforms.cpp
ros2_kitti_replay/test/: CMakeLists.txt  data_loader_base_test.cpp  data_replayer_static_test.cpp  data_replayer_test.cpp  point_cloud_data_loader_test.cpp  point_cloud_utils_test.cpp  pose_data_loader_test.cpp  pose_utils_test.cpp  timestamp_utils_test.cpp  timestamps_test.cpp  transforms_test.cpp
ros2_kitti_replay/test/include/ros2_kitti_replay_test/: test_utils.hpp  test_with_point_cloud_io.hpp  tests_with_point_cloud_io.hpp
ros2_kitti_replay/test/unit/: CMakeLists.txt  data_replayer_test.cpp  load_and_play_data_interface_test.cpp
ros2_kitti_replay/test/unit/include/ros2_kitti_replay_test/: test_with_pose_io.hpp
ros2_kitti_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
ros2_kitti_rviz_plugin/include/ros2_kitti_rviz_plugin/: replay_panel.hpp
ros2_kitti_rviz_plugin/src/: replay_panel.cpp
ros2_kitti_visualization_tools/: CMakeLists.txt  package.xml
ros2_kitti_visualization_tools/include/ros2_kitti_visualization_tools/: path_publisher.hpp
ros2_kitti_visualization_tools/src/: path_publisher.cpp
(+8 files in other folders)
