<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ros2_kitti_description</name>
  <version>0.1.0</version>
  <description>URDF Files and Generation Scripts for the KITTI Dataset</description>
  <maintainer email="tengfoonglam@yahoo.com.sg">Lam Teng Foong</maintainer>
  <license>BSD 3-clause</license>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>python-typing-pip</exec_depend>
  <exec_depend>python3-click</exec_depend>
  <exec_depend>python3-urdfpy-pip</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
