<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ros2_kitti_odom</name>
  <version>0.1.0</version>
  <description>Template for an Odometry Node Compatible with ros2_kitti_replay</description>
  <maintainer email="tengfoonglam@yahoo.com.sg">Lam Teng Foong</maintainer>
  <license>BSD 3-clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_export_depend>ros2_kitti_msgs</build_export_depend>

  <build_depend>image_transport</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>ros2_kitti_msgs</build_depend>
  <build_depend>ros2_kitti_visualization_tools</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
   <build_type>ament_cmake</build_type>
  </export>
</package>
