<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ros2_kitti_replay</name>
  <version>0.1.0</version>
  <description>Replayer for the KITTI Odometry Dataset</description>
  <maintainer email="tengfoonglam@yahoo.com.sg">Lam Teng Foong</maintainer>
  <license>BSD 3-clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>image_transport</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>ros2_kitti_core</build_depend>
  <build_depend>ros2_kitti_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ros2_kitti_description</exec_depend>
  <exec_depend>ros2_kitti_rviz_plugin</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
   <build_type>ament_cmake</build_type>
  </export>
</package>
